fix space, add footer

--- a/style.less
+++ b/style.less
@@ -22,6 +22,7 @@ body{
         display: inline-block;
     }
     button{
+        margin-top: 5px;
         letter-spacing: 2px;
         font-weight: 700;
         width: 90%;
@@ -131,4 +132,9 @@ body{
 
 .year{
     text-align: right;
+}
+
+.foot{
+    background-color: #373d48;
+    text-align: center;
 }
