--- a/style.less
+++ b/style.less
@@ -76,9 +76,10 @@ body{
     text-decoration: underline;
     text-underline-position: below;
     text-underline-offset: 10px;
-    text-decoration-color: #191c17;
+    text-decoration-color: black;
     text-decoration-thickness: 5px;
     padding-bottom: 15px;
+    text-align: center;
 }
 
 .second-title{
@@ -88,7 +89,7 @@ body{
     text-decoration: underline;
     text-underline-position: below;
     text-underline-offset: 10px;
-    text-decoration-color: #191c17;
+    text-decoration-color: black;
     text-decoration-thickness: 5px;
     text-align: center;
 }
