--- a/style.less
+++ b/style.less
@@ -29,6 +29,15 @@ body{
         background-color: #117a37; /* Green */
         border-radius: 50px;
     }
+    img{
+        min-height: 120%;
+        width: 110%;
+        box-shadow: 5px 10px #888888;
+        
+        .logo-top-mb{
+            width: 10%;
+        }
+    }
 }
 
 .main{
@@ -138,4 +147,17 @@ body{
 .foot{
     background-color: #373d48;
     text-align: center;
+    color: blanchedalmond;
 }
+
+.headx-logo{
+    width: 8%;
+    margin-right: 2%;
+
+}
+
+.headx-text{
+    width: 80%;
+    padding-bottom: 5px;
+}
+
