--- a/style.less
+++ b/style.less
@@ -13,6 +13,12 @@ body{
         margin-bottom: 0px;
     }
 
+    .button-grid{
+        display: inline-block;
+        padding-left:10px; 
+        padding-right:20px;
+    }
+    
     .headx-major{
         margin-top: 0px;
         font-size: 24px;
@@ -22,12 +28,14 @@ body{
         display: inline-block;
     }
     button{
+        margin-left: 10px;
         margin-top: 5px;
         letter-spacing: 2px;
         font-weight: 700;
-        width: 90%;
         background-color: #117a37; /* Green */
         border-radius: 50px;
+        min-width: 15%;
+        padding-right: 15px;
     }
     img{
         min-height: 120%;
