--- a/style.less
+++ b/style.less
@@ -36,6 +36,10 @@ body{
         border-radius: 50px;
         min-width: 15%;
     }
+
+    a{
+        text-decoration: none;
+    }
     img{
         min-height: 120%;
         width: 110%;
