--- a/style.less
+++ b/style.less
@@ -50,7 +50,7 @@ body{
 }
 
 .main{
-    background-image:linear-gradient(120deg, #117a37, #191414);
+    background-image:linear-gradient(120deg, #757575,  #494948, #171717);
     color: white;
     padding: 1%;
     .headx-name{
@@ -71,6 +71,7 @@ body{
         width: 90%;
         background-color: #117a37; /* Green */
         border-radius: 50px;
+        border-width: medium;
     }
 
     .main-grid{
@@ -89,26 +90,26 @@ body{
 
 .main-title{
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 4px;
     font-size: 24px;
     text-decoration: underline;
     text-underline-position: below;
     text-underline-offset: 10px;
-    text-decoration-color: black;
-    text-decoration-thickness: 5px;
+    text-decoration-color: #00BA4E;
+    text-decoration-thickness: 4px;
     padding-bottom: 15px;
     text-align: center;
 }
 
 .second-title{
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 4px;
     font-size: 24px;
     text-decoration: underline;
     text-underline-position: below;
     text-underline-offset: 10px;
-    text-decoration-color: black;
-    text-decoration-thickness: 5px;
+    text-decoration-color: #00BA4E;
+    text-decoration-thickness: 4px;
     text-align: center;
 }
 
@@ -125,10 +126,14 @@ body{
     }
 }
 
+.content-range{
+    margin-bottom: 20px;
+}
+
 .content-main{
     padding-top: 5px;
     padding-bottom: 10px;
-    border-top: 3px solid #ccc;
+    border-top: 3px solid rgba(204, 204, 204, 0.6);
     p{
         margin: 2px;
         font-size: 18px;
