--- a/style2.less
+++ b/style2.less
@@ -70,13 +70,9 @@ body{
         font-weight: 500;
     }
 
-    button{
-        letter-spacing: 1px;
-        font-weight: 700;
-        width: 90%;
-        background-color: #117a37; /* Green */
+    #check{
+        width: 100%;
         border-radius: 50px;
-        border-width: medium;
     }
 
     .main-grid{
@@ -149,10 +145,6 @@ body{
         font-weight: 800;
     }
 
-    button{
-        width: 50%;
-        background-color: #191414;
-    }
 
     ltg{
         text-align: right;
