--- a/style2.less
+++ b/style2.less
@@ -73,6 +73,7 @@ body{
     #check{
         width: 100%;
         border-radius: 50px;
+        height: 3rem;
     }
 
     .main-grid{
@@ -86,6 +87,11 @@ body{
         padding-top: 10px;
         padding-right:10px;
         padding-left:20px; 
+    }
+
+    input, select{
+        border-width: 2px;
+        border-color: blue;
     }
 }
 
