--- a/static/css/styleDemo.less
+++ b/static/css/styleDemo.less
@@ -179,15 +179,15 @@ body{
 
 #myTab {
     background-color: #373d48;
-    border-color: #00BA4E;
+    border-color: white;
     border-width: medium;
     .nav-link {
         font-size: 18px;
         font-weight: 800;
     }
     .active {
-        background-color: #00BA4E;
-        border-color: #00BA4E;
+        background-color: white;
+        border-color: white;
     }        
     .nav-link:not(.active) {
         color: white;
