--- a/static/css/style-sub.less
+++ b/static/css/style-sub.less
@@ -173,3 +173,10 @@ body{
     padding-bottom: 5px;
 }
 
+
+textarea{
+    margin-top: 10px;
+    border-width: 2px;
+    width: 100%;
+    height: 100px;
+}
